<resources>
    <string name="app_name" translatable="false">DessertTest</string>
    <string name="facebook_app_id">280492793864804</string>
    <string name="hobby">Hobby</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="profile">Profile</string>
    <string name="nearby">Nearby</string>
    <string name="chat">Chat</string>
    <string name="showme">Show me</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="everyone">Everyone</string>
    <string name="distance">Distance</string>
    <string name="age">Age</string>
    <string name="language">Language</string>
    <string name="signout">Signout</string>
    <string name="close_account">Close account</string>
    <string name="people_like_you">People like you</string>
    <string name="people_view">People view profile</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit Profile</string>
    <string name="get_vip">Get VIP</string>
    <string name="main_image">Main Image</string>
    <string name="about_me">About me</string>
    <string name="Introduce_yourself">Introduce yourself</string>
    <string name="study_career">Education and work</string>
    <string name="current_work">Current Work</string>
    <string name="add">Add</string>
    <string name="school">school / University</string>
    <string name="basic_infomation">ฺBasic Information</string>
    <string name="name">Name</string>
    <string name="language_profile">Language</string>
    <string name="religion">Religion</string>
    <string name="Interests">Interests</string>
    <string name="see_empty">No one has seen your profile yet</string>
    <string name="see_like">See who likes you</string>
    <string name="like_empty">No one likes you yet</string>
    <string name="today">Today </string>
    <string name="male_semi">M</string>
    <string name="female_semi">F</string>
    <string name="report_reset">Please wait for the reset at midnight</string>
    <string name="warning">Warning !!!</string>
    <string name="close">Close</string>
    <string name="failed">Failed</string>
    <string name="report_successful">User reporting successful</string>
    <string name="successful">Successful</string>
    <string name="cancle">Cancel</string>
    <string name="dialog_report">Report</string>
    <string name="dialog_reportUser">Report user issues</string>
    <string name="report">Report user</string>
    <string name="online">Online</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="send_audio">You sent a voice message</string>
    <string name="receive_audio">sent you a voice message</string>
    <string name="send_picture">You sent a picture</string>
    <string name="receive_picture">sent you a picture</string>
    <string name="let_start_chat">Let! start your chat</string>
    <string name="kilometer">km</string>
    <string name="times">times</string>
    <string name="count_report">Count</string>
    <string name="sayhi">Say hi</string>
    <string name="message">Message</string>
    <string name="start_chat">Start chat</string>
    <string name="cancel_match">Cancel matching</string>
    <string name="cancel_match_confirm">Do you want to cancel the matching?</string>
    <string name="delete_message_all">Delete chat history</string>
    <string name="delete_message_all_confirm">คDo you want to delete all messages?</string>
    <string name="touch">touch to view profile</string>
    <string name="signin_phone">Sign in with Phone No</string>
    <string name="your_name">Your name</string>
    <string name="your_name_hint">This is your name that will be shown to others</string>
    <string name="next">Next</string>
    <string name="your_gender">Your gender</string>
    <string name="your_age">Your birthday</string>
    <string name="note_gender">Note: You cannot change your gender after registration is complete.</string>
    <string name="note_age">Note: Users must be 18 years of age or older only.</string>
    <string name="profile_image">Profile picture</string>
    <string name="recommend_profile">Please upload your image. Must be a clear image and do not impersonate another person</string>
    <string name="loading">Loading...</string>
    <string name="note_phone">When you tap next, the app will send you a message with a verification code. If your phone number has already been verified The app will automatically login.</string>
    <string name="phone_hint">Phone No.</string>
    <string name="phine_no">Your phone number</string>
    <string name="otp">Your verification code</string>
    <string name="verification">The application has sent a verification code to</string>
    <string name="please">Please fill out below.</string>
    <string name="finish">Finish</string>
    <string name="register">Register</string>
    <string name="See_who_like">Let\'s see who likes you</string>
    <string name="Searching">Searching</string>
    <string name="chatna_empty">No one greets you yet \n Wait a little longer</string>
    <string name="chat_empty">When you match with other users \n Or when you accept the greeting \n Your match will appear here.</string>
    <string name="application_settings">Application settings</string>
    <string name="search_settings">Search settings</string>
    <string name="notifications">Notifications</string>
    <string name="active_status_settings">Active status settings</string>
    <string name="active_status">Active status</string>
    <string name="show_active_status_recently">Show Active status recently</string>
    <string name="notify_match">Notify when swipe right then matching</string>
    <string name="application_has_sent">Application has sent a confirmation code to</string>
    <string name="like_you_too">Like you too</string>
    <string name="send_message">Send message</string>
    <string name="matching_mode">Anyone can see you in Matching mode</string>
    <string name="list_mode">Anyone can see you in Nearby mode</string>
    <string name="see_other_user">See other user</string>
    <string name="matched">Matched</string>
    <string name="new_match">New match</string>
    <string name="you_and">You and</string>
    <string name="matched2">Matched</string>
    <string name="You_have_a_new_match">You have a new match</string>
    <string name="new_message">New message</string>
    <string name="you_have_new_message">You have a new message</string>
    <string name="touch_settings">Touch to settings</string>
    <string name="area_not_found">There are no other users in the area. You can increase the search range or expand the age range.</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="please_open_gps">Your GPS is off. Please turn on GPS to use the application.</string>
    <string name="open_gps">turn on GPS</string>
    <string name="enter_number">Please enter the number correctly.</string>
    <string name="close_account_confirm">Do you want to permanently delete this account from application?</string>
    <string name="vision_closed">Vision closed</string>
    <string name="vision_closed_match">If you turn off visibility in Matching mode Other users will not be able to see you.</string>
    <string name="vision_closed_nearby">If you turn off visibility in Nearby mode Other users will not be able to see you.</string>
    <string name="try_again">Please try again later.</string>
    <string name="visibility_settings">Visibility settings</string>
    <string name="visibility">Visibility</string>
    <string name="Send_a_message_to">Send a message to him/her.</string>
    <string name="back">back</string>
    <string name="you_are_vip">You are VIP</string>
    <string name="primary_profile_alert">If you don\'t have a profile picture, other users won\'t be able to see you. Do you want to exit?</string>
    <string name="delete_image">Delete photo</string>
    <string name="delete_image_confirm">Do you want to delete the photo?</string>
    <string name="Sign_in">Sign In</string>
    <string name="logging">You are logging in automatically.</string>
    <string name="Notification">Alert</string>
    <string name="up18">For those aged 18 and above only</string>
    <string name="enter_name">Please enter your name</string>
    <string name="choose_gender">Please choose your gender</string>
    <string name="choose_photo">Please choose your profile picture.</string>
    <string name="qa_improtant">How Important for you?</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="qa_choice1">A little important</string>
    <string name="qa_choice2">Absolutely important</string>
    <string name="qa_choice3">Important</string>
    <string name="qa_choice4">Very Important</string>
    <string name="qa_choice5">Serious Important!</string>
    <string name="question">Questions</string>
    <string name="question_sub_title">Answer the questions for better matching.</string>
    <string name="question_call">Q&amp;A for more quota</string>
    <string name="warning_skip">If you skip the question.You will doesn\'t receive a more quota today.</string>
    <string name="out_of_qa_description">Out of question, Sorry we out of question for quota today.</string>
    <string name="dessert_vip">Dessert VIP</string>
    <string name="loading_ads">Loading ads</string>
    <string name="match">Match</string>
    <string name="tryAgian">Try Again</string>
    <string name="aleart_gps_open">You must turn on GPS to access the application. Please try again</string>
    <string name="feedback">Feedback</string>
    <string name="blacklist">Your account has been suspended.</string>
    <string name="record">Press to Record</string>
    <string name="uploading">Uploading....</string>
    <string name="selected_questions">Please selected the answer</string>
    <string name="title_askQuestion">Answer questions</string>
    <string name="body_askQuestion">Anwering the question to increase the accuracy of the match<br/>(Get free 5 likes)</string>
    <string name="body_askQuestion2">Anwering the question to increase the accuracy of the match<br/>(Get free 3 stars)</string>
    <string name="out_of_quota">Increase accuracy of the match !!</string>
    <string name="out_of_questions">Sorry, Out of question !!</string>
    <string name="out_of_questions_description">Out of question</string>
    <string name="email">Email</string>
    <string name="error_title">Error, Something went wrong !!</string>
    <string name="password">Password</string>
    <string name="new_user">Join us.</string>
    <string name="verify_email">Please verify your account. at your e-mail</string>
    <string name="sending_to_email">Sending to email...</string>
    <string name="get_vip_description">Watch ads to get more likes<br />or apply for Dessert VIP to receive various privileges.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="phone_no">Phone No.</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter a message (at least 10 characters).</string>
    <string name="reason">Please tell us the reason why you stopped using it so that we can improve and give you a better experience in the future.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="assessment_form">Do the satisfaction assessment form. (Get 3 Stars for free)</string>
    <string name="satisfaction">Satisfaction</string>
</resources>