<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cardCorner"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/out_of_quota"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_gravity="center"
                android:textSize="@dimen/Text20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginEnd="@dimen/View8dp"
            android:layout_marginStart="@dimen/View8dp"
            android:layout_gravity="center"
            android:id="@+id/textAskQuestion"
            android:layout_marginTop="@dimen/View32dp"
            android:background="@drawable/unicorn_attention"
            android:layout_width="86dp"
            android:layout_height="86dp"/>
        <TextView
            android:layout_marginEnd="@dimen/View8dp"
            android:layout_marginStart="@dimen/View8dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/title_askQuestion"
            android:textSize="@dimen/Text16sp"
            android:layout_marginTop="@dimen/View16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginEnd="@dimen/View8dp"
            android:layout_marginStart="@dimen/View8dp"
            android:textAlignment="center"
            android:textColor="@color/white_grey"
            android:layout_gravity="center"
            android:text="@string/body_askQuestion"
            android:textSize="@dimen/Text14sp"
            android:layout_marginTop="@dimen/View4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginBottom="@dimen/View24dp"
                android:id="@+id/dismiss_button_askDialog"
                android:layout_weight="0.1"
                android:text="@string/cancle"
                android:theme="@style/Theme.MaterialComponents.buttonPurple"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_marginStart="@dimen/View32dp"
                android:layout_marginEnd="@dimen/View16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginBottom="@dimen/View24dp"
                android:id="@+id/confirm_button_askDialog"
                android:layout_weight="0.1"
                android:text="@string/ok"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_marginEnd="@dimen/View32dp"
                android:layout_marginStart="@dimen/View16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>