<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cardCorner">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/satisfaction"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_marginStart="@dimen/View32dp"
                android:layout_marginEnd="@dimen/View32dp"
                android:layout_gravity="center"
                android:textSize="@dimen/Text20sp"
                android:textColor="@color/text_black_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginTop="@dimen/View32dp"
                android:layout_gravity="center"
                android:background="@drawable/documents"
                android:layout_width="86dp"
                android:layout_height="86dp"/>

            <TextView
                android:textSize="@dimen/Text14sp"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/View32dp"
                android:layout_marginEnd="@dimen/View32dp"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_gravity="center"

                android:textColor="@color/text_black_gray"
                android:text="@string/assessment_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:layout_marginBottom="@dimen/View24dp"
                    android:id="@+id/cancel"
                    android:layout_marginTop="@dimen/View16dp"
                    android:layout_marginRight="@dimen/View12dp"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:backgroundTint="@color/disable_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_marginBottom="@dimen/View24dp"
                    android:id="@+id/ok"
                    android:layout_marginTop="@dimen/View16dp"
                    android:layout_gravity="center"
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>