<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cardCorner">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginStart="@dimen/View8dp"
            android:layout_marginEnd="@dimen/View8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/out_of_questions"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_marginStart="@dimen/View32dp"
                android:layout_marginEnd="@dimen/View32dp"
                android:layout_gravity="center"
                android:textSize="@dimen/Text20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginTop="@dimen/View32dp"
                android:layout_gravity="center"
                android:background="@drawable/unicorn_cry"
                android:layout_width="86dp"
                android:layout_height="86dp"/>
            <TextView
                android:textSize="@dimen/Text16sp"
                android:layout_marginTop="@dimen/View24dp"
                android:layout_marginStart="@dimen/View32dp"
                android:layout_marginEnd="@dimen/View32dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/out_of_questions_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/Text14sp"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/View32dp"
                android:layout_marginEnd="@dimen/View32dp"
                android:layout_marginTop="@dimen/View4dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/primary_profile_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginBottom="@dimen/View24dp"
                android:id="@+id/closeOutOfQuestion"
                android:layout_marginTop="@dimen/View16dp"
                android:layout_gravity="center"
                android:text="@string/report_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>